# wikitext.gmi

./: README.md  flake.nix  wikitext-gmi.cabal
app/: Main.hs  Parser.hs
