cabal-version:      2.4
name:               wikitext-gmi
version:            0.1.0

synopsis: A WikiText to Gemtext stream editor
description: wikitext.gmi provides a tool to convert the WikiText markup
language used by MediaWiki (powering sites like Wikipedia) to Gemtext, the
de-facto standard for Gemini space. Gemtext is a much smaller and simpler format
than MediaWiki (really, this is difficult to overstate!), so the conversion is
usually somewhat lossy.

-- A URL where users can report bugs.
-- bug-reports:

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             lincoln auster [they/them]
maintainer:         lincolnauster@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable wikitext-gmi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
