cabal-version:      2.4
name:               wikitext-gmi
version:            0.1.0

synopsis: A WikiText to Gemtext stream editor

-- A URL where users can report bugs.
-- bug-reports:

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             lincoln auster [they/them]
maintainer:         lincolnauster@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable wikitext-gmi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
